--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es3",
-    "module": "esnext",
+    "target": "es5",
+    "module": "es2020",
     "moduleResolution": "node",
     "jsx": "preserve",
     "declaration": true,
@@ -18,10 +18,7 @@
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
     "outDir": "lib",
-    "lib": [
-      "es2018",
-      "esnext"
-    ],
+    "lib": ["es2019"]
   },
   "include": ["src/**/*"],
   "exclude": [
