--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.5"
   },
   "files": [
     "dist",
@@ -63,9 +65,7 @@
     "lint": "eslint ./src --fix --ext js,ts,tsx",
     "pub": "npm publish --registry=https://registry.npmjs.org"
   },
-  "version": "1.0.7",
+  "version": "1.0.8",
   "dependencies": {
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.5"
   }
 }
