--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
   "deprecated": false,
   "description": "Born for creating immutable state",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "immer": "^9.0.6",
+    "jest": "^27.0.5",
     "prettier": "^2.2.1",
     "rollup": "^2.38.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.1.2",
-    "@types/jest": "^26.0.23",
-    "jest": "^27.0.5"
+    "typescript": "^4.1.2"
   },
   "files": [
     "dist",
