--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "url": "git+https://github.com/tnfe/immut.git"
   },
   "scripts": {
-    "build": "npm run build:umd && npm run build:umd-min",
+    "build": "npm run build:umd & npm run build:umd-min",
     "build:umd": "tsc & rollup -c",
-    "build:umd-min": "MIN=true tsc & rollup -c",
+    "build:umd-min": "tsc & MIN=true rollup -c",
     "test": "jest",
     "cov": "jest --coverage",
     "debug": "ts-node ./debug/array-slice.ts",
@@ -69,6 +69,6 @@
     "lint": "eslint ./src --fix --ext js,ts,tsx",
     "pub": "npm publish --registry=https://registry.npmjs.org"
   },
-  "version": "1.1.0",
+  "version": "1.2.0",
   "dependencies": {}
 }
