--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     ]
   },
   "bugs": {
-    "url": "https://github.com/tnfe/immut/issues"
+    "url": "https://github.com/tnfe/limu/issues"
   },
-  "bundleDependencies": false,
+  "bundleDependencies": [],
   "deprecated": false,
   "description": "Born for creating immutable state",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "immer": "^9.0.6",
+    "immer": "^9.0.15",
     "jest": "^27.0.5",
     "prettier": "^2.2.1",
     "rollup": "^2.38.0",
@@ -39,7 +39,7 @@
     "es",
     "src"
   ],
-  "homepage": "https://github.com/tnfe/immut#readme",
+  "homepage": "https://github.com/tnfe/limu#readme",
   "keywords": [
     "immutable",
     "immutable js",
@@ -51,13 +51,13 @@
   "license": "MIT",
   "name": "limu",
   "main": "dist/limu.min.js",
+  "module": "lib/index.js",
   "unpkg": "dist/limu.min.js",
   "types": "lib/index.d.ts",
   "npmName": "limu",
-  "peerDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tnfe/immut.git"
+    "url": "git+https://github.com/tnfe/limu.git"
   },
   "scripts": {
     "build": "npm run build:umd & npm run build:umd-min",
@@ -65,11 +65,12 @@
     "build:umd-min": "tsc & MIN=true rollup -c",
     "test": "jest",
     "cov": "jest --coverage",
+    "cov:nocache": "jest --no-cache --coverage",
+    "cov:dir": "jest --coverage --coverageDirectory='coverage'",
     "debug": "ts-node ./debug/array-slice.ts",
     "dev": "tsc --watch",
     "lint": "eslint ./src --fix --ext js,ts,tsx",
     "pub": "npm publish --registry=https://registry.npmjs.org"
   },
-  "version": "1.2.0",
-  "dependencies": {}
+  "version": "1.3.0"
 }
