--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "build:umd": "tsc & rollup -c",
     "build:umd-min": "tsc & MIN=true rollup -c",
     "test": "jest",
+    "test_no": "AUTO_FREEZE=0 jest",
     "cov": "jest --coverage",
     "cov:nocache": "jest --no-cache --coverage",
     "cov:dir": "jest --coverage --coverageDirectory='coverage'",
@@ -72,5 +73,5 @@
     "lint": "eslint ./src --fix --ext js,ts,tsx",
     "pub": "npm publish --registry=https://registry.npmjs.org"
   },
-  "version": "1.3.1"
+  "version": "3.0.1"
 }
