--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": true,
     "pretty": true,
     "skipLibCheck": true,
+    "allowJs": true,
     "rootDir": "src",
     "sourceMap": false,
     "strict": true,
