--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -9,6 +9,10 @@
     "s2": "ST=2 node ./limu-vs-immer.js",
     "s3": "ST=3 node ./limu-vs-immer.js",
     "s4": "ST=4 node ./limu-vs-immer.js",
+    "k1": "ST=1 node ./limu-vs-immer-skip-init.js",
+    "k2": "ST=2 node ./limu-vs-immer-skip-init.js",
+    "k3": "ST=3 node ./limu-vs-immer-skip-init.js",
+    "k4": "ST=4 node ./limu-vs-immer-skip-init.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
