--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@
 **/.DS_Store
 .vscode
 .coveralls.yml
+*.code-workspace
 
 debug
 coverage
 node_modules
 lib
 es/*
+benchmark/package-lock.json
 
 TIPME.md
 
