--- a/doc/package.json
+++ b/doc/package.json
@@ -31,6 +31,7 @@
     "@mdx-js/react": "^1.6.22",
     "@uiw/react-markdown-preview": "^4.0.9",
     "clsx": "^1.1.1",
+    "immer": "^10.0.2",
     "limu": "^3.3.6",
     "monaco-editor": "0.30.1",
     "prism-react-renderer": "^1.3.3",
