--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "build": "npm run build:umd & npm run build:umd-min",
     "build:umd": "tsc & rollup -c",
     "build:umd-min": "tsc & MIN=true rollup -c",
-    "cpdoc": "rm -rf ../limu-gh-pages/* && cp -r ./doc/build/* ../limu-gh-pages",
     "cov": "jest --coverage",
     "cov:dir": "jest --coverage --coverageDirectory='coverage'",
     "cov:nocache": "jest --no-cache --coverage",
+    "cpdoc": "rm -rf ../limu-gh-pages/* && cp -r ./doc/build/* ../limu-gh-pages",
     "debug": "ts-node ./debug/array-slice.ts",
     "dev": "tsc --watch",
-    "format": "prettier --cache --write . --ignore-path .gitignore --ignore-unknown",
+    "format": "prettier --cache --write . '!./doc/build' '!./doc/.docusaurus' --ignore-path .gitignore --ignore-unknown",
     "lint": "eslint ./src --fix --ext js,ts,tsx",
     "pub": "npm publish --registry=https://registry.npmjs.org",
     "test": "jest",
