--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -14,8 +14,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "i": "^0.3.7",
     "immer": "^9.0.15",
     "limu": "^3.7.1",
-    "mutative": "^0.5.0"
+    "mutative": "^0.5.0",
+    "npm": "^10.2.1",
+    "structurajs": "^0.11.6"
   }
 }
