build(3.8.3): optimize type

--- a/doc/package.json
+++ b/doc/package.json
@@ -7,6 +7,7 @@
     "clear": "docusaurus clear",
     "deploy": "docusaurus deploy",
     "docusaurus": "docusaurus",
+    "doc": "rm -rf ../../limu-gh-pages/* && cp -r ./build/* ../../limu-gh-pages",
     "serve": "docusaurus serve",
     "start": "IS_LOCAL=true docusaurus start",
     "swizzle": "docusaurus swizzle",
@@ -32,7 +33,7 @@
     "@uiw/react-markdown-preview": "^4.0.9",
     "clsx": "^1.1.1",
     "immer": "^10.0.2",
-    "limu": "^3.5.3",
+    "limu": "^3.8.1",
     "monaco-editor": "0.30.1",
     "prism-react-renderer": "^1.3.3",
     "react": "18",
