feat: add build:cjs, add for-of test case

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   ],
   "scripts": {
     "build": "npm run build:umd & npm run build:umd-min",
+    "build:cjs": "tsc & CJS=true rollup -c",
     "build:umd": "tsc & rollup -c",
     "build:umd-min": "tsc & MIN=true rollup -c",
     "cov": "jest --coverage",
